# robot-dog-rust

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: procurement.md  ros2_bridge.md  software_plan.md  source_index.md
src/: config.rs  driver.rs  gateway.rs  llm.rs  main.rs  planner.rs  service.rs
